--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,6 @@
+/* You can override the default CSS variables here. */
+@import '@craue/form-flow-bundle/css/craue_form_flow.css';
+
 body {
     background-color: skyblue;
 }
