--- a/templates/candidature/index.html.twig
+++ b/templates/candidature/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('app.css') }}">
 {% endblock %}
 
 {% block body %}
@@ -13,7 +14,7 @@
         {{ form_start(form) }}
 
         {# Afficher les étapes du formulaire #}
-        {{ form_flow_steps(flow) }}
+        {% include '@CraueFormFlow/FormFlow/stepList.html.twig' %}
 
         {{ form_widget(form) }}
 
