--- a/templates/candidature/success.html.twig
+++ b/templates/candidature/success.html.twig
@@ -38,7 +38,7 @@
 
                     <div class="valorant-actions" style="justify-content: center; margin-top: 30px;">
                         {# On ajoute la classe btn-valo et btn-primary au lien #}
-                        <a href="{{ path('app_candidature_create') }}" class="btn-valo btn-primary">
+                        <a href="{{ path('app_candidature') }}" class="btn-valo btn-primary">
                             DÉPOSER UNE NOUVELLE CANDIDATURE
                         </a>
                     </div>
